Add navigation menu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                     <span>AssistiveSense</span>
                 </a>
             </div>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active"><i class="fas fa-home"></i> Kryefaqja</a></li>
+                <li><a href="features.html"><i class="fas fa-cogs"></i> Veçoritë</a></li>
+                <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Pulti</a></li>
+                <li><a href="privacy.html"><i class="fas fa-user-shield"></i> Privatësia</a></li>
+                <li><a href="reporting.html"><i class="fas fa-flag"></i> Raportim</a></li>
+                <li><a href="intellectual-property.html"><i class="fas fa-balance-scale"></i> Pronësia Intelektuale</a></li>
+            </ul>
             <button class="hamburger" id="hamburgerMenu" aria-label="Shfaq/Fshih menynë">
                 <i class="fas fa-bars"></i>
             </button>
