Add authentication buttons

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                 <li><a href="reporting.html"><i class="fas fa-flag"></i> Raportim</a></li>
                 <li><a href="intellectual-property.html"><i class="fas fa-balance-scale"></i> Pronësia Intelektuale</a></li>
             </ul>
+            <div class="accessibility-controls">
+                <button id="increaseFont" aria-label="Rrit madhësinë e fontit"><i class="fas fa-text-height"></i></button>
+                <button id="decreaseFont" aria-label="Zvogëlo madhësinë e fontit"><i class="fas fa-text-width"></i></button>
+                <button id="highContrast" aria-label="Ndrysho kontrastin"><i class="fas fa-adjust"></i></button>
+                <button id="textToSpeechToggle" aria-label="Ndez/Fik transformimin e tekstit në të folur"><i class="fas fa-volume-up"></i></button>
+            </div>
+            <div class="auth-buttons">
+                <a href="#" class="btn btn-outline" id="loginBtn"><i class="fas fa-sign-in-alt"></i> Hyr</a>
+                <a href="#" class="btn btn-primary" id="registerBtn"><i class="fas fa-user-plus"></i> Regjistrohu</a>
+            </div>
             <button class="hamburger" id="hamburgerMenu" aria-label="Shfaq/Fshih menynë">
                 <i class="fas fa-bars"></i>
             </button>
