--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
     </header>
 
     <main>
-        <!-- Content placeholder -->
+        <section class="hero-section">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 class="main-title">AssistiveSense</h1>
+                    <p class="hero-description">Një platform bashkëpunuese për njerëzit me aftësi të kufizuara të shikimit. Aplikacioni ndihmon në zvogëlimin e pengesave dixhitale dhe rrit pavarësinë.</p>
+                    <div class="hero-buttons">
+                        <a href="#features" class="btn btn-primary"><i class="fas fa-arrow-right"></i> Shëtitje Veçorive</a>
+                        <a href="#" class="btn btn-outline"><i class="fas fa-info-circle"></i> Mëso më Shumë</a>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <div class="image-placeholder">
+                        <i class="fas fa-universal-access"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="main-footer">
