Add access matrix section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,63 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="matrix-section">
+            <div class="container">
+                <h2 class="section-title">Matrica e Aksesit dhe Roleve</h2>
+                <p class="section-subtitle">Kjo matricë tregon se çfarë mund dhe çfarë nuk mund të bëjë çdo rol në aplikacionin tonë</p>
+                
+                <div class="matrix-table-container">
+                    <table class="matrix-table" role="table">
+                        <thead>
+                            <tr>
+                                <th>Veçoritë</th>
+                                <th>Përdoruesi i Përgjithshëm</th>
+                                <th>Përdoruesi i Regjistruar</th>
+                                <th>Administratori</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Akseso Veçoritë Bazë</td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                            </tr>
+                            <tr>
+                                <td>Ruaj Preferencat</td>
+                                <td><i class="fas fa-times-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                            </tr>
+                            <tr>
+                                <td>Raportim i Problemeve</td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                            </tr>
+                            <tr>
+                                <td>Shkarkimi i të Dhënave</td>
+                                <td><i class="fas fa-times-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                            </tr>
+                            <tr>
+                                <td>Fshirja e Llogarisë</td>
+                                <td><i class="fas fa-times-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                                <td><i class="fas fa-check-circle"></i></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+                <div class="matrix-note">
+                    <p><strong>Shënim:</strong> Të drejtat mund të ndryshojnë sipas nevojave të sigurisë. Kontaktoni përkrahjen nëse keni pyetje.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="main-footer">
