add TTS pause/stop + contrast demo + hamburger menu
Also changed fa icon from fa-contrast to fa-adjust in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     
                     <div class="description-card">
                         <div class="card-icon">
-                            <i class="fas fa-contrast"></i>
+                            <i class="fas fa-adjust"></i>
                         </div>
                         <h3>Kontrast i Lartë</h3>
                         <p>Opsione të ndryshme të kontrastit dhe skemave ngjyrash për të përmirësuar lexueshmërinë për përdoruesit me shikim të kufizuar.</p>
